apiome-ui/examples/envoy-xds/01-minimal-route-config.yaml
name: local_route
virtual_hosts:
  - name: ping
    domains: ["*"]
    routes:
      - match:
          prefix: /ping
        route:
          cluster: ping_service
